# pycounts_jb_2024

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_jb_2024/: __init__.py
tests/: einstein.txt  test_pycounts_jb_2024.py
