[tool.poetry]
name = "pycounts_jb_2024"
version = "0.1.0"
description = "Calculate words in a text file"
authors = ["Jake Barnabe"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
